# website-pictures-server

./: .env  .gitignore  Cargo.toml
sql/: create_service.sql  create_service_section.sql  get_services.sql  get_services_by_section.sql  setup.sql
src/: db.rs  lib.rs  main.rs  models.rs
