[package]
name = "website-pictures-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
actix-cors = "0.7.0"
percent-encoding = "2.1"
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
dotenv = "0.15"
config = "0.13"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
thiserror = "2.0.11"
derive_more = { version = "2.0.1", features = ["full"] }
confik = "0.12.0"
chrono = { version = "0.4.39", features = ["serde"] }
postgres-types = "0.2.9"
